--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -99,8 +99,8 @@
                                                 <div class="form-group">
                                                     <label>Choose a Role</label>
                                                     <select th:field="*{role}" name="role" class="custom-select">
-                                                        <option th:value="" th:text="Select"></option>
-                                                        <option th:each="theRole : ${roles}" th:text="${role}"></option>
+                                                        <option th:value="''" th:text="Select"></option>
+                                                        <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.description}"></option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -140,15 +140,19 @@
                                 </header>
                                 <div class="panel-body">
                                     <div class="table-responsive">
-                                        <table class="table table-striped">
+                                        <table th:object="${user}" class="table table-striped">
                                             <thead>
-                                            <tr>
-                                                <th scope="col">Name</th>
-                                                <th scope="col">Email(username)</th>
-                                                <th scope="col">Gender</th>
-                                                <th scope="col">Phone</th>
-                                                <th scope="col">Role</th>
-                                                <th scope="col">Action</th>
+                                            <tr th:each="user : ${users}">
+                                                <th th:text="${user.firstName}" scope="col">Name</th>
+                                                <th th:text="${user.userName}" scope="col">Email(username)</th>
+                                                <th th:text="${user.gender}" scope="col">Gender</th>
+                                                <th th:text="${user.phone}" scope="col">Phone</th>
+                                                <th th:text="${user.role.getDescription()}" scope="col">Role</th>
+<!--                                                <th scope="col">Action</th>-->
+                                                <td class="actions">
+                                                    <a href="#"><button type="button" class="btn btn-warning btn-sm">Update</button></a>
+                                                    <a href="#" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
+                                                </td>
                                             </tr>
                                             </thead>
 
@@ -160,10 +164,10 @@
                                                 <td></td>
                                                 <td></td>
                                                 <td></td>
-                                                <td class="actions">
-                                                    <a href="#"><button type="button" class="btn btn-warning btn-sm">Update</button></a>
-                                                    <a href="#" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
-                                                </td>
+<!--                                                <td class="actions">-->
+<!--                                                    <a href="#"><button type="button" class="btn btn-warning btn-sm">Update</button></a>-->
+<!--                                                    <a href="#" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>-->
+<!--                                                </td>-->
                                             </tr>
 
                                             </tbody>
